--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/DetailView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/DetailView.xaml
@@ -1,6 +1,7 @@
 ﻿<local:ViewBase x:Class="BingoWallpaper.Uwp.Views.DetailView"
                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                xmlns:converters="using:BingoWallpaper.Uwp.Converters"
                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                 xmlns:local="using:BingoWallpaper.Uwp.Views"
                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -8,7 +9,10 @@
                 DataContext="{Binding Source={StaticResource Locator},
                                       Path=Detail}"
                 mc:Ignorable="d">
-    <Page.Transitions>
+    <Page.Resources>
+        <converters:WallpaperUrlConverter x:Key="WallpaperUrlConverter" />
+    </Page.Resources>
+    <!--<Page.Transitions>
         <TransitionCollection>
             <NavigationThemeTransition>
                 <NavigationThemeTransition.DefaultNavigationTransitionInfo>
@@ -16,40 +20,40 @@
                 </NavigationThemeTransition.DefaultNavigationTransitionInfo>
             </NavigationThemeTransition>
         </TransitionCollection>
-    </Page.Transitions>
+    </Page.Transitions>-->
     <Page.BottomAppBar>
         <CommandBar Background="{ThemeResource SystemAccentBrush}">
             <CommandBar.SecondaryCommands>
                 <AppBarButton x:Uid="/Detail/OpenWallpaperSetting"
-                              Command="{x:Bind ViewModel.OpenWallpaperSettingCommand}" />
+                              Command="{Binding Path=OpenWallpaperSettingCommand}" />
                 <AppBarButton x:Uid="/Detail/OpenLockScreenSetting"
-                              Command="{x:Bind ViewModel.OpenLockScreenSettingCommand}" />
+                              Command="{Binding Path=OpenLockScreenSettingCommand}" />
             </CommandBar.SecondaryCommands>
             <AppBarButton x:Uid="/Detail/Save"
-                          Command="{x:Bind ViewModel.SaveCommand}">
+                          Command="{Binding Path=SaveCommand}">
                 <AppBarButton.Icon>
                     <uwp:FontAwesome Icon="Save" />
                 </AppBarButton.Icon>
             </AppBarButton>
             <AppBarButton x:Uid="/Detail/SetWallpaper"
-                          Command="{x:Bind ViewModel.SetWallpaperCommand}">
+                          Command="{Binding Path=SetWallpaperCommand}">
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="Segoe MDL2 Assets"
                               Glyph="&#xE771;" />
                 </AppBarButton.Icon>
             </AppBarButton>
             <AppBarButton x:Uid="/Detail/SetLockScreen"
-                          Command="{x:Bind ViewModel.SetLockScreenCommand}"
-                          Icon="SetLockScreen"></AppBarButton>
+                          Command="{Binding Path=SetLockScreenCommand}"
+                          Icon="SetLockScreen" />
             <AppBarButton x:Uid="/Detail/Share">
                 <AppBarButton.Icon>
                     <FontIcon FontFamily="ms-appx:/Assets/Fonts/iconfont.ttf#iconfont"
-                              Glyph="&#xE672;"></FontIcon>
+                              Glyph="&#xE672;" />
                 </AppBarButton.Icon>
             </AppBarButton>
         </CommandBar>
     </Page.BottomAppBar>
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Image />
+        <Image Source="{Binding Path=Wallpaper, Converter={StaticResource WallpaperUrlConverter}, ConverterParameter='1920x1080'}" />
     </Grid>
 </local:ViewBase>
