--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperAppBarStyle.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperAppBarStyle.xaml
@@ -1,5 +1,15 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:behaviors="using:BingoWallpaper.Uwp.Behaviors"
+                    xmlns:interactivity="using:Microsoft.Xaml.Interactivity">
     <Style x:Key="BingoWallpaperAppBarStyle"
-           TargetType="AppBar" />
+           TargetType="AppBar">
+        <Setter Property="interactivity:Interaction.Behaviors">
+            <Setter.Value>
+                <interactivity:BehaviorCollection>
+                    <behaviors:BingoWallpaperAppBarBehavior />
+                </interactivity:BehaviorCollection>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
