--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperAppBarStyle.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Styles/BingoWallpaperAppBarStyle.xaml
@@ -20,10 +20,19 @@
                                 <ColumnDefinition Width="*" />
                                 <ColumnDefinition Width="Auto" />
                             </Grid.ColumnDefinitions>
-                            <ContentControl Grid.Column="0"
+                            <ContentControl x:Name="ContentControl"
+                                            Grid.Column="0"
+                                            HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                            VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
                                             Content="{TemplateBinding Content}"
+                                            ContentTemplate="{TemplateBinding ContentTemplate}"
+                                            ContentTransitions="{TemplateBinding ContentTransitions}"
+                                            Foreground="{TemplateBinding Foreground}"
                                             IsTabStop="False" />
-                            <Button Grid.Column="1"
+                            <Button x:Name="ExpandButton"
+                                    Grid.Column="1"
                                     MinHeight="{ThemeResource AppBarThemeCompactHeight}"
                                     Padding="16,23,16,0">
                                 <FontIcon x:Name="EllipsisIcon"
@@ -55,42 +64,43 @@
                                             <DoubleAnimation Storyboard.TargetName="EllipsisIcon"
                                                              Storyboard.TargetProperty="(UIElement.RenderTransform).(TransformGroup.Children)[0].(RotateTransform.Angle)"
                                                              From="0"
-                                                             To="180" />
+                                                             To="180"
+                                                             Duration="0:0:0.467" />
                                         </Storyboard>
                                     </VisualTransition>
-                                    <VisualTransition From="CompactOpenUp"
-                                                      To="CompactClosed"
-                                                      GeneratedDuration="0:0:0.167"></VisualTransition>
-                                    <VisualTransition From="CompactClosed"
-                                                      To="CompactOpenDown"
-                                                      GeneratedDuration="0:0:0.467"></VisualTransition>
-                                    <VisualTransition From="CompactOpenDown"
-                                                      To="CompactClosed"
-                                                      GeneratedDuration="0:0:0.167"></VisualTransition>
-                                    <VisualTransition From="MinimalClosed"
-                                                      To="MinimalOpenUp"
-                                                      GeneratedDuration="0:0:0.467"></VisualTransition>
-                                    <VisualTransition From="MinimalOpenUp"
-                                                      To="MinimalClosed"
-                                                      GeneratedDuration="0:0:0.167"></VisualTransition>
-                                    <VisualTransition From="MinimalClosed"
-                                                      To="MinimalOpenDown"
-                                                      GeneratedDuration="0:0:0.467"></VisualTransition>
-                                    <VisualTransition From="MinimalOpenDown"
-                                                      To="MinimalClosed"
-                                                      GeneratedDuration="0:0:0.167"></VisualTransition>
-                                    <VisualTransition From="HiddenClosed"
-                                                      To="HiddenOpenUp"
-                                                      GeneratedDuration="0:0:0.467"></VisualTransition>
-                                    <VisualTransition From="HiddenOpenUp"
-                                                      To="HiddenClosed"
-                                                      GeneratedDuration="0:0:0.167"></VisualTransition>
-                                    <VisualTransition From="HiddenClosed"
-                                                      To="HiddenOpenDown"
-                                                      GeneratedDuration="0:0:0.467"></VisualTransition>
-                                    <VisualTransition From="HiddenOpenDown"
-                                                      To="HiddenClosed"
-                                                      GeneratedDuration="0:0:0.167"></VisualTransition>
+                                    <VisualTransition GeneratedDuration="0:0:0.167"
+                                                      From="CompactOpenUp"
+                                                      To="CompactClosed" />
+                                    <VisualTransition GeneratedDuration="0:0:0.467"
+                                                      From="CompactClosed"
+                                                      To="CompactOpenDown" />
+                                    <VisualTransition GeneratedDuration="0:0:0.167"
+                                                      From="CompactOpenDown"
+                                                      To="CompactClosed" />
+                                    <VisualTransition GeneratedDuration="0:0:0.467"
+                                                      From="MinimalClosed"
+                                                      To="MinimalOpenUp" />
+                                    <VisualTransition GeneratedDuration="0:0:0.167"
+                                                      From="MinimalOpenUp"
+                                                      To="MinimalClosed" />
+                                    <VisualTransition GeneratedDuration="0:0:0.467"
+                                                      From="MinimalClosed"
+                                                      To="MinimalOpenDown" />
+                                    <VisualTransition GeneratedDuration="0:0:0.167"
+                                                      From="MinimalOpenDown"
+                                                      To="MinimalClosed" />
+                                    <VisualTransition GeneratedDuration="0:0:0.467"
+                                                      From="HiddenClosed"
+                                                      To="HiddenOpenUp" />
+                                    <VisualTransition GeneratedDuration="0:0:0.167"
+                                                      From="HiddenOpenUp"
+                                                      To="HiddenClosed" />
+                                    <VisualTransition GeneratedDuration="0:0:0.467"
+                                                      From="HiddenClosed"
+                                                      To="HiddenOpenDown" />
+                                    <VisualTransition GeneratedDuration="0:0:0.167"
+                                                      From="HiddenOpenDown"
+                                                      To="HiddenClosed" />
                                 </VisualStateGroup.Transitions>
                                 <VisualState x:Name="CompactClosed" />
                                 <VisualState x:Name="CompactOpenUp" />
