--- a/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
+++ b/MSDevUnion.BingWallpaper/BingoWallpaper.UWP/Views/MainView.xaml
@@ -2,6 +2,7 @@
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:bingoWallpaper="using:BingoWallpaper"
+      xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
       xmlns:controls="using:BingoWallpaper.Uwp.Controls"
       xmlns:converters="using:BingoWallpaper.Uwp.Converters"
       xmlns:core="using:Microsoft.Xaml.Interactions.Core"
@@ -11,13 +12,13 @@
       xmlns:leanCloud="using:BingoWallpaper.Models.LeanCloud"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:media="using:Microsoft.Xaml.Interactions.Media"
-      xmlns:canvas="using:Microsoft.Graphics.Canvas.UI.Xaml"
       DataContext="{Binding Source={StaticResource Locator},
                             Path=Main}"
       mc:Ignorable="d">
     <Page.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Styles/BingoWallpaperAppBarStyle.xaml" />
                 <ResourceDictionary Source="/Styles/BingoWallpaperFlipViewStyle.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <converters:BooleanInverseConverter x:Key="BooleanInverseConverter" />
@@ -28,7 +29,8 @@
     <Page.BottomAppBar>
         <AppBar x:Name="AppBar"
                 Background="{ThemeResource SystemAccentBrush}"
-                ClosedDisplayMode="Compact">
+                ClosedDisplayMode="Compact"
+                Style="{StaticResource BingoWallpaperAppBarStyle}">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
@@ -40,13 +42,15 @@
                 <AppBarButton x:Uid="/Main/Refresh"
                               Grid.Column="1"
                               Command="{Binding Path=RefreshCommand}"
-                              IsCompact="{Binding ElementName=AppBar,Path=IsOpen,Converter={StaticResource BooleanInverseConverter}}">
+                              IsCompact="{Binding ElementName=AppBar,
+                                                  Path=IsOpen,
+                                                  Converter={StaticResource BooleanInverseConverter}}">
                     <AppBarButton.Icon>
-                        <FontIcon Glyph="&#xE629;"
-                                  FontFamily="ms-appx:/Assets/Fonts/iconfont.ttf#iconfont"
+                        <FontIcon FontFamily="ms-appx:/Assets/Fonts/iconfont.ttf#iconfont"
+                                  Glyph="&#xE629;"
                                   RenderTransformOrigin="0.5,0.5">
                             <FontIcon.RenderTransform>
-                                <RotateTransform x:Name="RefreshIconRotateTransform"></RotateTransform>
+                                <RotateTransform x:Name="RefreshIconRotateTransform" />
                             </FontIcon.RenderTransform>
                         </FontIcon>
                         <!--<PathIcon HorizontalAlignment="Center"
@@ -73,7 +77,9 @@
                 </AppBarButton>
                 <AppBarButton x:Uid="/Main/Setting"
                               Grid.Column="2"
-                              IsCompact="{Binding ElementName=AppBar,Path=IsOpen,Converter={StaticResource BooleanInverseConverter}}">
+                              IsCompact="{Binding ElementName=AppBar,
+                                                  Path=IsOpen,
+                                                  Converter={StaticResource BooleanInverseConverter}}">
                     <AppBarButton.Icon>
                         <PathIcon HorizontalAlignment="Center"
                                   VerticalAlignment="Center"
@@ -87,7 +93,9 @@
                 </AppBarButton>
                 <AppBarButton x:Uid="/Main/About"
                               Grid.Column="3"
-                              IsCompact="{Binding ElementName=AppBar,Path=IsOpen,Converter={StaticResource BooleanInverseConverter}}">
+                              IsCompact="{Binding ElementName=AppBar,
+                                                  Path=IsOpen,
+                                                  Converter={StaticResource BooleanInverseConverter}}">
                     <AppBarButton.Icon>
                         <FontIcon FontFamily="Segoe MDL2 Assets"
                                   Glyph="&#xE946;" />
@@ -119,7 +127,7 @@
                                                            Converter={StaticResource WallpaperUrlConverter},
                                                            ConverterParameter='1920x1080'}"
                                           Stretch="UniformToFill" />
-                        <canvas:CanvasControl Draw="CanvasControl_Draw"></canvas:CanvasControl>
+                        <canvas:CanvasControl Draw="CanvasControl_Draw" />
                         <!--#endregion-->
                         <GridView IsItemClickEnabled="True"
                                   ItemsSource="{Binding}"
@@ -129,7 +137,9 @@
                                     <controls:WallpaperItem Width="160"
                                                             Height="96"
                                                             Text="{Binding Path=Archive.Info}"
-                                                            Url="{Binding Path=Image,Converter={StaticResource WallpaperUrlConverter},ConverterParameter='1920x1080'}" />
+                                                            Url="{Binding Path=Image,
+                                                                          Converter={StaticResource WallpaperUrlConverter},
+                                                                          ConverterParameter='1920x1080'}" />
                                 </DataTemplate>
                             </GridView.ItemTemplate>
                             <interactivity:Interaction.Behaviors>
